--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -21,6 +21,7 @@ body {
     background:url(../imagens/fundo-desfocado.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+    
 }
 
 section#telefone {
@@ -32,4 +33,12 @@ section#telefone {
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
 
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 470px;
 }
