--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -39,6 +39,30 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
-    height: 470px;
+    width: 267px;
+    height: 471px;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
+    box-sizing: border-box;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid white;
+    transform: translate(-3px -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    transition: transform 0.3s border 1s;
+
+}
+
+img {
+    background-color: aliceblue;
 }
