--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -52,14 +52,16 @@ section#redes-sociais img {
 }
 
 section#redes-sociais {
+    
     text-align: right;
 }
 
 section#redes-sociais img:hover {
+
     border: 2px solid white;
     transform: translate(-3px -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
-    transition: transform 0.3s border 1s;
+    transition: transform 1s border 2s;
 
 }
 
